objects/ssot__ClinicalServiceRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BodySiteId__c</fullName>
        <label>Body Site</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestCategoryId__c</fullName>
        <label>Clinical Service Request Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestEndDate__c</fullName>
        <label>Clinical Service Request End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestGroupId__c</fullName>
        <label>Clinical Service Request Group</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestPriority__c</fullName>
        <label>Clinical Service Request Priority</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestSignedDate__c</fullName>
        <label>Clinical Service Request Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestStartDate__c</fullName>
        <label>Clinical Service Request Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestStatus__c</fullName>
        <label>Clinical Service Request Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestType__c</fullName>
        <label>Clinical Service Request Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRqstPreqCodeId__c</fullName>
        <label>Clinical Service Rqst Preq Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRqstQtyType__c</fullName>
        <label>Quantity Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryId__c</fullName>
        <label>Diagnostic Summary</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasPrerequisites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Prerequisites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityCodeId__c</fullName>
        <label>Healthcare Facility Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityId__c</fullName>
        <label>Healthcare Facility</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcarePerformerTypeCodeId__c</fullName>
        <label>Healthcare Performer Type Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Clinical Service Request Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalClinicalServiceRequestId__c</fullName>
        <label>Original Clinical Service Request</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientHealthConditionId__c</fullName>
        <label>Patient Health Condition</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientInstructionText__c</fullName>
        <label>Patient Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformerId__c</fullName>
        <label>Performer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformerObject__c</fullName>
        <label>Performer Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityDenominatorNumber__c</fullName>
        <label>Quantity Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityNumeratorNumber__c</fullName>
        <label>Quantity Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityNumeratorUnitOfMeasureId__c</fullName>
        <label>Quantity Numerator Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonCodeId__c</fullName>
        <label>Reason Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedCareObservationId__c</fullName>
        <label>Related Care Observation</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestCodeId__c</fullName>
        <label>Request Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequesterId__c</fullName>
        <label>Requester</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequesterObject__c</fullName>
        <label>Requester Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723197748_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalServiceRequest_OriginalClini_rel</label>
        <referenceTo>ssot__ClinicalServiceRequest__dlm</referenceTo>
        <relationshipLabel>ClinicalServiceRequest_OriginalClini_rel</relationshipLabel>
        <relationshipName>rel_1716723197748_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723199224_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalServiceRequest_ReasonCodeId__rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>ClinicalServiceRequest_ReasonCodeId__rel</relationshipLabel>
        <relationshipName>rel_1716723199224_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723200739_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalServiceRequest_HealthcareFac_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>ClinicalServiceRequest_HealthcareFac_rel</relationshipLabel>
        <relationshipName>rel_1716723200739_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>